--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DatePicker"></activity>
+        <activity android:name=".DatePicker">
+
+        </activity>
         <activity
             android:name=".SleepTracker"
             android:parentActivityName=".MainActivity">
