--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,25 +12,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DatePicker">
 
-        </activity>
-        <activity
-            android:name=".SleepTracker"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".UserLogin">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".UserLogin" />
+
+        <activity android:name=".DatePicker" />
+
+        <activity
+            android:name=".SleepTracker"
+            android:parentActivityName=".UserLogin">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".UserLogin" />
+        </activity>
     </application>
 
 </manifest>
