--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ExerciseDashboard"
+            android:label="@string/exercise_dashboard_activity_title"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
             android:name=".ConsultantDashboard"
-            android:label="@string/consultant_dashboard_activity_title"/>
+            android:label="@string/consultant_dashboard_activity_title" />
         <activity
             android:name=".UserDashboard"
-            android:label="@string/dashboard_activity_title"/>
+            android:label="@string/dashboard_activity_title" />
         <activity
             android:name=".Login"
             android:label="@string/app_name">
@@ -30,8 +34,8 @@
         <activity android:name=".DatePicker" />
         <activity
             android:name=".SleepTracker"
-            android:parentActivityName=".UserDashboard"
-            android:label="@string/sleep_activity_title">
+            android:label="@string/sleep_activity_title"
+            android:parentActivityName=".UserDashboard">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".UserDashboard" />
