--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".SleepDashboard"
+            android:label="@string/sleep_dashboard_activity_title"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".FoodDashboard"
             android:label="@string/food_dashboard_activity_title"
             android:theme="@style/AppTheme.NoActionBar" />
