--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".addSleepEntry"></activity>
         <activity
             android:name=".UserConsultantsDashboard"
             android:label="@string/user_consultants_dashboard_activity_title"
