basic signup for consultant works and account confirmed in DB, user signup in progress

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HireConsultant"></activity>
+        <activity
+            android:name=".ui.login.CreateUserUser"
+            android:label="@string/title_activity_create_user_user"></activity>
+        <activity android:name=".HireConsultant" />
         <activity
             android:name=".AddMeal"
             android:label="@string/add_meal" />
