--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WorkoutPlan"></activity>
+        <activity android:name=".ConsultantSuggestsPlan"></activity>
+        <activity android:name=".WorkoutPlan" />
         <activity android:name=".DietPlan" />
         <activity
             android:name=".ui.login.CreateUserUser"
