--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,10 @@
         <activity android:name=".DietPlan" />
         <activity
             android:name=".ui.login.CreateUserUser"
-            android:label="@string/title_activity_create_user_user" />
-        <activity android:name=".HireConsultant" />
+            android:label="@string/title_activity_create_user_user"
+            android:theme="@style/UserAppTheme" />
+        <activity
+            android:name=".HireConsultant" />
         <activity
             android:name=".AddMeal"
             android:label="@string/add_meal" />
@@ -25,7 +27,8 @@
             android:label="@string/add_exercise" />
         <activity
             android:name=".ui.login.CreateUserConsultant"
-            android:label="@string/title_activity_create_user_consultant" />
+            android:label="@string/title_activity_create_user_consultant"
+            android:theme="@style/ConsultantAppTheme" />
         <activity
             android:name=".ConsultantPlansDashboard"
             android:label="@string/title_activity_consultant_plans"
@@ -55,10 +58,12 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ConsultantDashboard"
-            android:label="@string/consultant_dashboard_activity_title" />
+            android:label="@string/consultant_dashboard_activity_title"
+            android:theme="@style/ConsultantAppTheme" />
         <activity
             android:name=".UserDashboard"
-            android:label="@string/dashboard_activity_title" />
+            android:label="@string/dashboard_activity_title"
+            android:theme="@style/UserAppTheme" />
         <activity
             android:name=".Login"
             android:label="@string/app_name">
